# solar-panels-project

./: main.py  pyproject.toml
src/: baza.py  kreiraj_tabelu
