[project]
name = "solarni"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.9",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "rasterio>=1.5.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "shapely>=2.1.2",
]
